--- a/static/compatibilities/contour.yaml
+++ b/static/compatibilities/contour.yaml
@@ -20,7 +20,7 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 20.0.1
-  images: ['docker.io/bitnami/envoy:1.34.1-debian-12-r0', 'docker.io/bitnami/contour:1.31.0-debian-12-r2']
+  images: ['docker.io/bitnami/contour:1.31.0-debian-12-r2', 'docker.io/bitnami/envoy:1.34.1-debian-12-r0']
 - version: 1.30.0
   kube: ['1.30', '1.29', '1.28']
   requirements: []
@@ -32,7 +32,7 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 18.2.3
-  images: ['docker.io/bitnami/envoy:1.29.5-debian-12-r0', 'docker.io/bitnami/contour:1.29.0-debian-12-r1']
+  images: ['docker.io/bitnami/contour:1.29.0-debian-12-r1', 'docker.io/bitnami/envoy:1.29.5-debian-12-r0']
 - version: 1.28.0
   kube: ['1.29', '1.28', '1.27']
   requirements: []
@@ -42,19 +42,19 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 15.4.0
-  images: ['docker.io/bitnami/envoy:1.27.2-debian-11-r8', 'docker.io/bitnami/contour:1.27.0-debian-11-r9']
+  images: ['docker.io/bitnami/contour:1.27.0-debian-11-r9', 'docker.io/bitnami/envoy:1.27.2-debian-11-r8']
 - version: 1.26.0
   kube: ['1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   chart_version: 13.1.4
-  images: ['docker.io/bitnami/envoy:1.26.5-debian-11-r0', 'docker.io/bitnami/contour:1.26.0-debian-11-r17']
+  images: ['docker.io/bitnami/contour:1.26.0-debian-11-r17', 'docker.io/bitnami/envoy:1.26.5-debian-11-r0']
 - version: 1.25.0
   kube: ['1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
   chart_version: 12.2.2
-  images: ['docker.io/bitnami/envoy:1.26.3-debian-11-r10', 'docker.io/bitnami/contour:1.25.0-debian-11-r73']
+  images: ['docker.io/bitnami/contour:1.25.0-debian-11-r73', 'docker.io/bitnami/envoy:1.26.3-debian-11-r10']
 - version: 1.24.0
   kube: ['1.26', '1.25', '1.24']
   requirements: []
@@ -64,7 +64,7 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 10.1.1
-  images: ['docker.io/bitnami/envoy:1.24.0-debian-11-r11', 'docker.io/bitnami/contour:1.23.0-debian-11-r10']
+  images: ['docker.io/bitnami/contour:1.23.0-debian-11-r10', 'docker.io/bitnami/envoy:1.24.0-debian-11-r11']
 - version: 1.22.0
   kube: ['1.24', '1.23', '1.22']
   requirements: []
