--- a/static/compatibilities/kyverno.yaml
+++ b/static/compatibilities/kyverno.yaml
@@ -8,73 +8,82 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 3.6.0
+  images: ['curlimages/curl:8.10.1', 'reg.kyverno.io/kyverno/background-controller:v1.16.0',
+    'reg.kyverno.io/kyverno/cleanup-controller:v1.16.0', 'reg.kyverno.io/kyverno/kyverno-cli:v1.16.0',
+    'reg.kyverno.io/kyverno/kyverno:v1.16.0', 'reg.kyverno.io/kyverno/kyvernopre:v1.16.0',
+    'reg.kyverno.io/kyverno/reports-controller:v1.16.0', 'registry.k8s.io/kubectl:v1.32.7']
 - version: 1.15.0
   kube: ['1.33', '1.32', '1.31', '1.30']
   requirements: []
   incompatibilities: []
   chart_version: 3.5.0
+  images: ['bitnami/kubectl:1.32.3', 'busybox:1.35', 'reg.kyverno.io/kyverno/background-controller:v1.15.0',
+    'reg.kyverno.io/kyverno/cleanup-controller:v1.15.0', 'reg.kyverno.io/kyverno/kyverno-cli:v1.15.0',
+    'reg.kyverno.io/kyverno/kyverno:v1.15.0', 'reg.kyverno.io/kyverno/kyvernopre:v1.15.0',
+    'reg.kyverno.io/kyverno/reports-controller:v1.15.0']
 - version: 1.14.0
   kube: ['1.32', '1.31', '1.30', '1.29']
   requirements: []
   incompatibilities: []
   chart_version: 3.4.0
+  images: ['bitnami/kubectl:1.32.3', 'busybox:1.35', 'reg.kyverno.io/kyverno/background-controller:v1.14.0',
+    'reg.kyverno.io/kyverno/cleanup-controller:v1.14.0', 'reg.kyverno.io/kyverno/kyverno-cli:v1.14.0',
+    'reg.kyverno.io/kyverno/kyverno:v1.14.0', 'reg.kyverno.io/kyverno/kyvernopre:v1.14.0',
+    'reg.kyverno.io/kyverno/reports-controller:v1.14.0']
 - version: 1.13.0
   kube: ['1.31', '1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
   chart_version: 3.3.2
-  images: ['ghcr.io/kyverno/cleanup-controller:v1.13.0', 'ghcr.io/kyverno/kyverno:v1.13.0',
-    'ghcr.io/kyverno/kyverno-cli:v1.13.0', 'ghcr.io/kyverno/kyvernopre:v1.13.0', 'bitnami/kubectl:1.30.2',
-    'ghcr.io/kyverno/reports-controller:v1.13.0', 'busybox:1.35', 'ghcr.io/kyverno/background-controller:v1.13.0']
+  images: ['bitnami/kubectl:1.30.2', 'busybox:1.35', 'ghcr.io/kyverno/background-controller:v1.13.0',
+    'ghcr.io/kyverno/cleanup-controller:v1.13.0', 'ghcr.io/kyverno/kyverno-cli:v1.13.0',
+    'ghcr.io/kyverno/kyverno:v1.13.0', 'ghcr.io/kyverno/kyvernopre:v1.13.0', 'ghcr.io/kyverno/reports-controller:v1.13.0']
 - version: 1.12.0
   kube: ['1.29', '1.28', '1.27', '1.26']
   requirements: []
   incompatibilities: []
   chart_version: 3.2.0
-  images: ['ghcr.io/kyverno/background-controller:v1.12.0', 'ghcr.io/kyverno/kyvernopre:v1.12.0',
-    'ghcr.io/kyverno/kyverno:v1.12.0', 'bitnami/kubectl:1.28.5', 'ghcr.io/kyverno/cleanup-controller:v1.12.0',
-    'ghcr.io/kyverno/reports-controller:v1.12.0', 'ghcr.io/kyverno/kyverno-cli:v1.12.0',
-    'busybox:1.35']
+  images: ['bitnami/kubectl:1.28.5', 'busybox:1.35', 'ghcr.io/kyverno/background-controller:v1.12.0',
+    'ghcr.io/kyverno/cleanup-controller:v1.12.0', 'ghcr.io/kyverno/kyverno-cli:v1.12.0',
+    'ghcr.io/kyverno/kyverno:v1.12.0', 'ghcr.io/kyverno/kyvernopre:v1.12.0', 'ghcr.io/kyverno/reports-controller:v1.12.0']
 - version: 1.11.0
   kube: ['1.28', '1.27', '1.26', '1.25']
   requirements: []
   incompatibilities: []
   chart_version: 3.1.0
-  images: ['bitnami/kubectl:1.26.4', 'ghcr.io/kyverno/reports-controller:v1.11.0',
-    'ghcr.io/kyverno/kyverno:v1.11.0', 'ghcr.io/kyverno/background-controller:v1.11.0',
-    'ghcr.io/kyverno/cleanup-controller:v1.11.0', 'ghcr.io/kyverno/kyvernopre:v1.11.0',
-    'busybox:1.35', 'bitnami/kubectl:1.26.10']
+  images: ['bitnami/kubectl:1.26.10', 'bitnami/kubectl:1.26.4', 'busybox:1.35', 'ghcr.io/kyverno/background-controller:v1.11.0',
+    'ghcr.io/kyverno/cleanup-controller:v1.11.0', 'ghcr.io/kyverno/kyverno:v1.11.0',
+    'ghcr.io/kyverno/kyvernopre:v1.11.0', 'ghcr.io/kyverno/reports-controller:v1.11.0']
 - version: 1.10.0
   kube: ['1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
   chart_version: 3.0.0
-  images: ['ghcr.io/kyverno/kyverno:v1.10.0', 'bitnami/kubectl:1.26.4', 'ghcr.io/kyverno/kyvernopre:v1.10.0',
-    'ghcr.io/kyverno/reports-controller:v1.10.0', 'ghcr.io/kyverno/cleanup-controller:v1.10.0',
-    'ghcr.io/kyverno/background-controller:v1.10.0', 'busybox:1.35']
+  images: ['bitnami/kubectl:1.26.4', 'busybox:1.35', 'ghcr.io/kyverno/background-controller:v1.10.0',
+    'ghcr.io/kyverno/cleanup-controller:v1.10.0', 'ghcr.io/kyverno/kyverno:v1.10.0',
+    'ghcr.io/kyverno/kyvernopre:v1.10.0', 'ghcr.io/kyverno/reports-controller:v1.10.0']
 - version: 1.9.0
   kube: ['1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
   chart_version: 2.7.0
-  images: ['ghcr.io/kyverno/kyvernopre:v1.9.0', 'busybox:1.35', 'ghcr.io/kyverno/cleanup-controller:v1.9.0',
-    'ghcr.io/kyverno/kyverno:v1.9.0']
+  images: ['busybox:1.35', 'ghcr.io/kyverno/cleanup-controller:v1.9.0', 'ghcr.io/kyverno/kyverno:v1.9.0',
+    'ghcr.io/kyverno/kyvernopre:v1.9.0']
 - version: 1.8.0
   kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
   chart_version: 2.6.0
-  images: [busybox, 'ghcr.io/kyverno/kyvernopre:v1.8.0', 'ghcr.io/kyverno/kyverno:v1.8.0']
+  images: [busybox, 'ghcr.io/kyverno/kyverno:v1.8.0', 'ghcr.io/kyverno/kyvernopre:v1.8.0']
 - version: 1.7.0
   kube: ['1.23', '1.22', '1.21']
   requirements: []
   incompatibilities: []
   chart_version: 2.4.0
-  images: ['ghcr.io/kyverno/kyverno:v1.7.0', busybox, 'ghcr.io/kyverno/kyvernopre:v1.7.0']
+  images: [busybox, 'ghcr.io/kyverno/kyverno:v1.7.0', 'ghcr.io/kyverno/kyvernopre:v1.7.0']
 - version: 1.6.0
   kube: ['1.23', '1.22', '1.21', '1.20', '1.19', '1.18', '1.17', '1.16']
   requirements: []
   incompatibilities: []
   chart_version: 2.2.0
-  images: ['ghcr.io/kyverno/kyverno:v1.6.0', 'ghcr.io/kyverno/kyvernopre:v1.6.0',
-    busybox]
+  images: [busybox, 'ghcr.io/kyverno/kyverno:v1.6.0', 'ghcr.io/kyverno/kyvernopre:v1.6.0']
