--- a/static/compatibilities/velero.yaml
+++ b/static/compatibilities/velero.yaml
@@ -9,14 +9,14 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 11.2.0
-  images: ['velero/velero:v1.17.1', 'docker.io/bitnamilegacy/kubectl:1.33']
+  images: ['docker.io/bitnamilegacy/kubectl:1.33', 'velero/velero:v1.17.1']
 - version: 1.17.0
   kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
     '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18']
   requirements: []
   incompatibilities: []
   chart_version: 11.2.0
-  images: ['velero/velero:v1.17.1', 'docker.io/bitnamilegacy/kubectl:1.33']
+  images: ['docker.io/bitnamilegacy/kubectl:1.33', 'velero/velero:v1.17.1']
 - version: 1.16.0
   kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
     '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18']
@@ -30,7 +30,7 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 8.7.2
-  images: ['velero/velero:v1.15.2', 'docker.io/bitnami/kubectl:1.33']
+  images: ['docker.io/bitnami/kubectl:1.33', 'velero/velero:v1.15.2']
 - version: 1.14.0
   kube: ['1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26', '1.25',
     '1.24', '1.23', '1.22', '1.21', '1.20', '1.19', '1.18']
@@ -58,7 +58,7 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 5.0.2
-  images: ['velero/velero:v1.11.1', 'docker.io/bitnami/kubectl:1.33']
+  images: ['docker.io/bitnami/kubectl:1.33', 'velero/velero:v1.11.1']
 - version: 1.10.0
   kube: ['1.28', '1.27', '1.26', '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19',
     '1.18']
